unpackaged/main/default/objects/Engagement_Attendee__c/Engagement_Attendee__c.object-meta.xml
<CustomObject>
    <label>Engagement Attendee</label>
    <nameField>
        <label>Engagement Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>