unpackaged/main/default/objects/Engagement_Attendee__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagement Attendees</relationshipLabel>
    <relationshipName>Engagement_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>