unpackaged/main/default/objects/Engagement_Attendee__c/fields/Account_City_State__c.field-meta.xml
<CustomField>
    <fullName>Account_City_State__c</fullName>
    <formula>Account__r.BillingCity + &quot;, &quot; + TEXT(Account__r.BillingStateCode)</formula>
    <label>Account City/State</label>
    <type>Text</type>
</CustomField>