unpackaged/main/default/objects/Engagement_Attendee__c/fields/Account_Info__c.field-meta.xml
<CustomField>
    <fullName>Account_Info__c</fullName>
    <formula>Account__r.Name &amp;  BR() &amp;  Account__r.ShippingStreet &amp; BR() &amp; Account__r.ShippingCity &amp; &quot;, &quot; &amp; Account__r.ShippingState &amp; &quot; &quot; &amp; Account__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Info (Email Merge)</label>
    <type>Text</type>
</CustomField>