unpackaged/main/default/objects/Engagement_Attendee__c/fields/Accounting_Data_Change__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Data_Change__c</fullName>
    <inlineHelpText>This is used for when the Contact, COurse or Engagement changes on the attendee</inlineHelpText>
    <label>Accounting Data Change</label>
    <type>Date</type>
</CustomField>