unpackaged/main/default/objects/Engagement_Attendee__c/fields/Active_Waitlists__c.field-meta.xml
<CustomField>
    <fullName>Active_Waitlists__c</fullName>
    <description>displays the total number of waitlists attached to a class that a student is about to be booked into.</description>
    <label>Active Waitlists</label>
    <summaryFilterItems>
        <field>Engagement_Waitlist__c.Waitlist_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled, Expired</value>
    </summaryFilterItems>
    <summaryForeignKey>Engagement_Waitlist__c.Engagement_Attendee__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>