unpackaged/main/default/objects/Engagement_Attendee__c/fields/Associated_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Associated_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Attendee</label>
    <referenceTo>Engagement_Attendee__c</referenceTo>
    <relationshipLabel>Engagement Attendees</relationshipLabel>
    <relationshipName>Engagement_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>