unpackaged/main/default/objects/Engagement_Attendee__c/fields/Attendee_Code__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Code__c</fullName>
    <formula>Engagement__r.Engagement_Number__c &amp; &quot;-&quot; &amp; Text( Attendee_No__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Code</label>
    <type>Text</type>
</CustomField>