unpackaged/main/default/objects/Engagement_Attendee__c/fields/Attendee_No__c.field-meta.xml
<CustomField>
    <fullName>Attendee_No__c</fullName>
    <label>Attendee #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>