unpackaged/main/default/objects/Engagement_Attendee__c/fields/Attendee_Notes__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Notes__c</fullName>
    <label>Attendee Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>