unpackaged/main/default/objects/Engagement_Attendee__c/fields/Attendee_Type__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Type__c</fullName>
    <description>Engagement Attendee Type</description>
    <label>Attendee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Participant</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Co-Member</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Engagement Support</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>Guest Presenter</fullName>
            </value>
            <value>
                <fullName>Industry Professional</fullName>
            </value>
            <value>
                <fullName>Instructor</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Moderator</fullName>
            </value>
            <value>
                <fullName>NCM Guest</fullName>
            </value>
            <value>
                <fullName>NCM Resource</fullName>
            </value>
            <value>
                <fullName>Observer</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>Candidate</fullName>
            </value>
            <value>
                <fullName>Visitor</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
            <value>
                <fullName>Associate Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>