unpackaged/main/default/objects/Engagement_Attendee__c/fields/Booked_Own_Travel__c.field-meta.xml
<CustomField>
    <fullName>Booked_Own_Travel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booked Own Travel</label>
    <type>Checkbox</type>
</CustomField>