unpackaged/main/default/objects/Engagement_Attendee__c/fields/Cancellation_Detail__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Detail__c</fullName>
    <label>Cancellation Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cancel_and_Disconnect_Details</valueSetName>
    </valueSet>
</CustomField>