unpackaged/main/default/objects/Engagement_Attendee__c/fields/Cancellation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Notes__c</fullName>
    <label>Cancellation Notes</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>