unpackaged/main/default/objects/Engagement_Attendee__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Populated with Account Physical Address.</description>
    <label>City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>