unpackaged/main/default/objects/Engagement_Attendee__c/fields/Class_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Class_Requirements__c</fullName>
    <inlineHelpText>Used for Email Template, pulls from Engagement field</inlineHelpText>
    <label>Class Requirements</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>