unpackaged/main/default/objects/Engagement_Attendee__c/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cohort</label>
    <referenceTo>Cohort__c</referenceTo>
    <relationshipLabel>Engagement Attendees</relationshipLabel>
    <relationshipName>Engagement_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>