unpackaged/main/default/objects/Engagement_Attendee__c/fields/Cohort_Exam_Complete__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Exam_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self-Study Exam Completed</label>
    <type>Checkbox</type>
</CustomField>