unpackaged/main/default/objects/Engagement_Attendee__c/fields/Cohort_Student__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cohort Student</label>
    <referenceTo>Cohort_Student__c</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagement_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>