unpackaged/main/default/objects/Engagement_Attendee__c/fields/Collateral_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Collateral_First_Name__c</fullName>
    <formula>LEFT( Collateral_Name__c ,  FIND(&quot; &quot;, Collateral_Name__c) - 1 )</formula>
    <label>Collateral First Name</label>
    <type>Text</type>
</CustomField>