unpackaged/main/default/objects/Engagement_Attendee__c/fields/Collateral_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Last_Name__c</fullName>
    <formula>MID(Collateral_Name__c, FIND( &quot; &quot;, Collateral_Name__c), LEN(Collateral_Name__c))</formula>
    <label>Collateral Last Name</label>
    <type>Text</type>
</CustomField>