unpackaged/main/default/objects/Engagement_Attendee__c/fields/Collateral_Name__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Name__c</fullName>
    <label>Collateral Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>