unpackaged/main/default/objects/Engagement_Attendee__c/fields/Commission_Received__c.field-meta.xml
<CustomField>
    <fullName>Commission_Received__c</fullName>
    <label>Commission Received</label>
    <type>Date</type>
</CustomField>