unpackaged/main/default/objects/Engagement_Attendee__c/fields/Concur_List_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Concur_List_Item_Id__c</fullName>
    <label>Concur List Item Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>