unpackaged/main/default/objects/Engagement_Attendee__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagement Attendees</relationshipLabel>
    <relationshipName>Engagement_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>