unpackaged/main/default/objects/Engagement_Attendee__c/fields/Contact_Account_is_the_Financial_Data__c.field-meta.xml
<CustomField>
    <fullName>Contact_Account_is_the_Financial_Data__c</fullName>
    <formula>if( Contact__r.Account.Name =  Financial_Data_Account__r.Name , &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Account is the Financial Data?</label>
    <type>Text</type>
</CustomField>