unpackaged/main/default/objects/Engagement_Attendee__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <inlineHelpText>This is the specific email the contact wants to have all correspondence regarding this engagement sent to</inlineHelpText>
    <label>Attendee Email</label>
    <type>Email</type>
</CustomField>