unpackaged/main/default/objects/Engagement_Attendee__c/fields/Contact_Email_Opt_Out_Code__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Opt_Out_Code__c</fullName>
    <formula>Contact__r.HasOptedOutOfEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email Opt-Out (Code)</label>
    <type>Checkbox</type>
</CustomField>