unpackaged/main/default/objects/Engagement_Attendee__c/fields/Contact_ID_Code__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_Code__c</fullName>
    <formula>Contact__r.ContactID_18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact ID (Code)</label>
    <type>Text</type>
</CustomField>