unpackaged/main/default/objects/Engagement_Attendee__c/fields/Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info__c</fullName>
    <formula>Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName &amp;  BR() &amp; Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Info (Email Merge)</label>
    <type>Text</type>
</CustomField>