unpackaged/main/default/objects/Engagement_Attendee__c/fields/Course_Agenda_Link__c.field-meta.xml
<CustomField>
    <fullName>Course_Agenda_Link__c</fullName>
    <formula>Engagement__r.Course__r.Agenda_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Agenda Link</label>
    <type>Text</type>
</CustomField>