unpackaged/main/default/objects/Engagement_Attendee__c/fields/Course_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Course_List_Price__c</fullName>
    <label>Course List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>