unpackaged/main/default/objects/Engagement_Attendee__c/fields/Course_Price__c.field-meta.xml
<CustomField>
    <fullName>Course_Price__c</fullName>
    <label>Course Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>