unpackaged/main/default/objects/Engagement_Attendee__c/fields/Credit_Card_Auth_Sent__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Auth_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Card Auth Sent?</label>
    <type>Checkbox</type>
</CustomField>