unpackaged/main/default/objects/Engagement_Attendee__c/fields/Date_Last_Verified__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Verified__c</fullName>
    <inlineHelpText>Date that this record was updated from Intranet</inlineHelpText>
    <label>Date Last Verified</label>
    <type>Date</type>
</CustomField>