unpackaged/main/default/objects/Engagement_Attendee__c/fields/Days_left_on_deferment__c.field-meta.xml
<CustomField>
    <fullName>Days_left_on_deferment__c</fullName>
    <formula>IF(


 ISNULL( Deferment_Starts__c ) , 

0, 

 Deferment_Ends__c -today()



)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days left on deferment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>