unpackaged/main/default/objects/Engagement_Attendee__c/fields/Days_Since_First_Reschedule__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_First_Reschedule__c</fullName>
    <formula>IF(
    NOT( ISBLANK( First_Reschedule_Date__c ) ),
    IF(
        ISBLANK( Cancellation_Date__c ),
        TODAY() - First_Reschedule_Date__c,
        Cancellation_Date__c - First_Reschedule_Date__c
    ),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since First Reschedule</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>