unpackaged/main/default/objects/Engagement_Attendee__c/fields/Days_till_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Days_till_Engagement__c</fullName>
    <formula>IF(
    DATEVALUE( Engagement__r.Engagement_Start__c ) &lt;= TODAY(),
    0,
    DATEVALUE( Engagement__r.Engagement_Start__c ) - TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days till Engagement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>