unpackaged/main/default/objects/Engagement_Attendee__c/fields/Deferment_Ends__c.field-meta.xml
<CustomField>
    <fullName>Deferment_Ends__c</fullName>
    <inlineHelpText>Last date of deferment before tuition is forfeited. This is automatically populated, but can be overridden manually.</inlineHelpText>
    <label>Credit Expiration Date</label>
    <type>Date</type>
</CustomField>