unpackaged/main/default/objects/Engagement_Attendee__c/fields/Deferment_Starts__c.field-meta.xml
<CustomField>
    <fullName>Deferment_Starts__c</fullName>
    <inlineHelpText>Date the attendee moved to Deferred status - the attendee has typically 180 days (6 months) to re-register or tuition will be forfeited.</inlineHelpText>
    <label>Last Time Credit Filed Date</label>
    <type>Date</type>
</CustomField>