unpackaged/main/default/objects/Engagement_Attendee__c/fields/Departure__c.field-meta.xml
<CustomField>
    <fullName>Departure__c</fullName>
    <label>Departure</label>
    <type>DateTime</type>
</CustomField>