unpackaged/main/default/objects/Engagement_Attendee__c/fields/Differs_From_Contact_Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Differs_From_Contact_Primary_Email__c</fullName>
    <description>logic compares the email on the engagement attendee on the email on the contact the engagement attendee was created from. Checks a box if it evaluates to true.</description>
    <formula>Contact_Email__c &lt;&gt; Primary_Email_from_Contact__c</formula>
    <label>Differs From Contact Primary Email</label>
    <type>Checkbox</type>
</CustomField>