unpackaged/main/default/objects/Engagement_Attendee__c/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <formula>Contact__r.User_ID__r.Employee_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Id</label>
    <type>Text</type>
</CustomField>