unpackaged/main/default/objects/Engagement_Attendee__c/fields/Engagement_Attendee_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Attendee_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Attendee ID(18)</label>
    <type>Text</type>
</CustomField>