unpackaged/main/default/objects/Engagement_Attendee__c/fields/Engagement_Attendee_ID__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Attendee_ID__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Attendee (ID)</label>
    <type>Text</type>
</CustomField>