unpackaged/main/default/objects/Engagement_Attendee__c/fields/Engagement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Engagement_End_Date__c</fullName>
    <formula>DATEVALUE( Engagement__r.Engagement_End__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement End Date</label>
    <type>Date</type>
</CustomField>