unpackaged/main/default/objects/Engagement_Attendee__c/fields/Engagement_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Record_Type__c</fullName>
    <formula>Engagement__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Record Type</label>
    <type>Text</type>
</CustomField>