unpackaged/main/default/objects/Engagement_Attendee__c/fields/Engagement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Start_Date__c</fullName>
    <formula>DATEVALUE( Engagement__r.Engagement_Start__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Start Date</label>
    <type>Date</type>
</CustomField>