unpackaged/main/default/objects/Engagement_Attendee__c/fields/Engagement_Waitlist__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Waitlist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Waitlist</label>
    <referenceTo>Engagement_Waitlist__c</referenceTo>
    <relationshipLabel>Engagement Attendees</relationshipLabel>
    <relationshipName>Engagement_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>