unpackaged/main/default/objects/Engagement_Attendee__c/fields/Financial_Data_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Data_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account for which the attendee will use financial data from</inlineHelpText>
    <label>Financial Data Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagement Attendees (Financial Data Account)</relationshipLabel>
    <relationshipName>Engagement_Attendees2</relationshipName>
    <type>Lookup</type>
</CustomField>