unpackaged/main/default/objects/Engagement_Attendee__c/fields/Financial_Data_Account_Zip__c.field-meta.xml
<CustomField>
    <fullName>Financial_Data_Account_Zip__c</fullName>
    <formula>Financial_Data_Account__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Data Account Zip</label>
    <type>Text</type>
</CustomField>