unpackaged/main/default/objects/Engagement_Attendee__c/fields/Financial_Data_Notes__c.field-meta.xml
<CustomField>
    <fullName>Financial_Data_Notes__c</fullName>
    <label>Financial Data Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>