unpackaged/main/default/objects/Engagement_Attendee__c/fields/Financial_Data_Number__c.field-meta.xml
<CustomField>
    <fullName>Financial_Data_Number__c</fullName>
    <inlineHelpText>Group-Member #</inlineHelpText>
    <label>Financial Data Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>