unpackaged/main/default/objects/Engagement_Attendee__c/fields/First_Reschedule_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Reschedule_Date__c</fullName>
    <label>First Reschedule Date</label>
    <type>Date</type>
</CustomField>