unpackaged/main/default/objects/Engagement_Attendee__c/fields/Flight_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Flight_Confirmation__c</fullName>
    <label>Flight Confirmation</label>
    <length>32</length>
    <type>Text</type>
</CustomField>