unpackaged/main/default/objects/Engagement_Attendee__c/fields/Flight_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Flight_Confirmation_Date__c</fullName>
    <label>Flight Confirmation Date</label>
    <type>Date</type>
</CustomField>