unpackaged/main/default/objects/Engagement_Attendee__c/fields/Homework__c.field-meta.xml
<CustomField>
    <fullName>Homework__c</fullName>
    <description>Used for Email Template, pulls from Engagement field</description>
    <inlineHelpText>Used for Email Template, pulls from Engagement field</inlineHelpText>
    <label>Homework</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>