unpackaged/main/default/objects/Engagement_Attendee__c/fields/Hotel_Booking_Method__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Booking_Method__c</fullName>
    <label>Hotel Booking Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NCM</fullName>
            </value>
            <value>
                <fullName>VRBO</fullName>
            </value>
            <value>
                <fullName>Stay with family</fullName>
            </value>
            <value>
                <fullName>Alt hotel with points or discount</fullName>
            </value>
            <value>
                <fullName>Alt hotel for other preference/reasons</fullName>
            </value>
            <value>
                <fullName>NCM preferred hotel on own</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>