unpackaged/main/default/objects/Engagement_Attendee__c/fields/Hotel_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Confirmation__c</fullName>
    <label>Hotel Confirmation</label>
    <length>32</length>
    <type>Text</type>
</CustomField>