unpackaged/main/default/objects/Engagement_Attendee__c/fields/Hotel_Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Confirmation_Number__c</fullName>
    <label>Hotel Confirmation Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>