unpackaged/main/default/objects/Engagement_Attendee__c/fields/Hotel_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hotel Confirmed</label>
    <type>Checkbox</type>
</CustomField>