unpackaged/main/default/objects/Engagement_Attendee__c/fields/Hotel_Days__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Days__c</fullName>
    <formula>Hotel_End_Date__c - Hotel_Start_Date__c</formula>
    <label>Hotel Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>