unpackaged/main/default/objects/Engagement_Attendee__c/fields/Hotel_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Hotel_End_Date__c</fullName>
    <label>Hotel End Date</label>
    <type>Date</type>
</CustomField>