unpackaged/main/default/objects/Engagement_Attendee__c/fields/Hotel_Name__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Name__c</fullName>
    <label>Hotel Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>