unpackaged/main/default/objects/Engagement_Attendee__c/fields/Hotel_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Notes__c</fullName>
    <label>Hotel Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>