unpackaged/main/default/objects/Engagement_Attendee__c/fields/Hotel_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Start_Date__c</fullName>
    <label>Hotel Start Date</label>
    <type>Date</type>
</CustomField>