unpackaged/main/default/objects/Engagement_Attendee__c/fields/How_Resbul_Received__c.field-meta.xml
<CustomField>
    <fullName>How_Resbul_Received__c</fullName>
    <description>This is the form that holds all kinds of information pertaining to the Engagement and the Hotel.</description>
    <inlineHelpText>Reservation Bulletin  (Form)</inlineHelpText>
    <label>How Resbul Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Hotel List</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Travel Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>