unpackaged/main/default/objects/Engagement_Attendee__c/fields/In_Meeting_Room__c.field-meta.xml
<CustomField>
    <fullName>In_Meeting_Room__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Meeting Room</label>
    <type>Checkbox</type>
</CustomField>