unpackaged/main/default/objects/Engagement_Attendee__c/fields/Intranet_City__c.field-meta.xml
<CustomField>
    <fullName>Intranet_City__c</fullName>
    <label>Intranet City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>