unpackaged/main/default/objects/Engagement_Attendee__c/fields/Intranet_Confirmed_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Intranet_Confirmed_Hotel__c</fullName>
    <label>Intranet Confirmed Hotel</label>
    <length>80</length>
    <type>Text</type>
</CustomField>