unpackaged/main/default/objects/Engagement_Attendee__c/fields/Intranet_Country__c.field-meta.xml
<CustomField>
    <fullName>Intranet_Country__c</fullName>
    <label>Intranet Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>