unpackaged/main/default/objects/Engagement_Attendee__c/fields/Intranet_State__c.field-meta.xml
<CustomField>
    <fullName>Intranet_State__c</fullName>
    <label>Intranet State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>