unpackaged/main/default/objects/Engagement_Attendee__c/fields/Intranet_URL__c.field-meta.xml
<CustomField>
    <fullName>Intranet_URL__c</fullName>
    <label>Intranet URL</label>
    <type>Url</type>
</CustomField>